  - Async services never called through Quartz Scheduler (only scheduled)
  - ServiceCallAsync.callWaiter() replaced by callFuture()
  - Removed ServiceCallAsync.resultReceiver()
  - Removed ServiceResultReceiver interface - use callFuture() instead
  - Removed ServiceResultWaiter class - use callFuture() instead
  - See related new features below
- Removed ServiceSemaphore entity, now using ServiceParameterSemaphore
- Deprecated methods
  - These methods were deprecated (usually by methods with shorter names)
    long ago and with other API changes now removing them
  - Removed getLocalizedMessage() and formatValue() from L10nFacade
  - Removed runScriptInCurrentContext(), evaluateCondition(),
    evaluateContextField(), and evaluateStringExpand() from ResourceFacade
- ArtifactHit and ArtifactHitBin now use same artifact type enum as
  ArtifactAuthz, for efficiency and consistency; configuration of
  artifact-stats by sub-type no longer supported, had little value and
  caused performance overhead
- The ContextStack class has moved to the org.moqui.util package
- When updating to this version recommend stopping all instances in a
  cluster before starting any instance with the new version

New Features

- Now using Jetty embedded for the executable WAR instead of Winstone
  - initially Jetty version 9.3.8.v20160314
  - this version of Jetty requires Java 8
  - now internally using Servlet API 3.1.0
- Various library updates, big cleanup of classes found in multiple jar
  files (JarHell checks pass; nice in general, needed for ElasticSearch)
- Tool Factory
  - Added org.moqui.context.ToolFactory interface used to initialize,
    destroy, and get instances of tools
  - Added tools.tool-factory element in Moqui Conf XML file; has default
    tools in MoquiDefaultConf.xml and can be populated or modified in
    component and/or runtime conf XML files
  - Use new ExecutionContextFactory.getToolFactory(),
    ExecutionContextFactory.getTool(), and