@@ -15,6 +15,15 @@ along with this software (see the LICENSE.md file). If not, see
 <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified">
     <!-- Reusable artifacts (abstract elements, groups, attributeGroups -->
     <xs:element name="description" type="xs:string"/>
+    <xs:element name="parameter">
+        <xs:complexType>
+            <xs:attribute name="name" type="xs:string" use="required"/>
+            <xs:attribute name="from" type="xs:string"/>
+            <xs:attribute name="value" type="xs:string"/>
+            <xs:attribute name="required" default="false" type="boolean"><xs:annotation><xs:documentation>The parameter
+                element is used in many places, only some (such as screen.parameter) use this attribute.</xs:documentation></xs:annotation></xs:attribute>
+        </xs:complexType>
+    </xs:element>
 
     <!-- Plain name, simple letters and digits for greatest compatibility with various tools -->
     <xs:simpleType name="name-plain"><xs:restriction base="xs:string">
