@@ -473,15 +473,6 @@ along with this software (see the LICENSE.md file). If not, see
                 names and values from in addition to the parameter sub-elements.</xs:documentation></xs:annotation></xs:attribute>
         </xs:complexType>
     </xs:element>
-    <xs:element name="parameter">
-        <xs:complexType>
-            <xs:attribute name="name" type="xs:string" use="required"/>
-            <xs:attribute name="from" type="xs:string"/>
-            <xs:attribute name="value" type="xs:string"/>
-            <xs:attribute name="required" default="false" type="boolean"><xs:annotation><xs:documentation>The parameter
-                element is used in many places, only some (such as screen.parameter) use this attribute.</xs:documentation></xs:annotation></xs:attribute>
-        </xs:complexType>
-    </xs:element>
 
   <!-- ================== Input Fields ==================== -->
     <xs:element name="SubFields" abstract="true"/>
